# rust-workshop

./: .gitignore  README.md
00-rustfmt/: Cargo.toml  README.md
00-rustfmt/src/: main.rs
01-clippy/: Cargo.toml  README.md
01-clippy/src/: main.rs
02-basics/: Cargo.toml  README.md
02-basics/src/: main.rs
03-pattern-matching/: Cargo.toml  README.md
03-pattern-matching/src/: main.rs
04-error-handling/: Cargo.toml  README.md
04-error-handling/src/: main.rs
05-iterators/: Cargo.toml  README.md
05-iterators/src/: main.rs
06-good-practices/: Cargo.toml  README.md
06-good-practices/src/: lib.rs  main.rs  private_two.rs  pub_one.rs
06-good-practices/src/nested/: mod.rs  nested_one.rs  nested_two.rs
07-generics/: Cargo.toml  README.md
07-generics/src/: main.rs
08-traits/: Cargo.toml  README.md
08-traits/src/: main.rs
09-first-project/: Cargo.toml  README.md  animals.json  animals_solution.json
09-first-project/src/: animal.rs  cage.rs  error.rs  lib.rs  main.rs
10-advanced-rust/: Cargo.toml
10-advanced-rust/src/: hrtb.rs  impl_trait.rs  lib.rs  lifetime_bounds.rs  macros.rs  main.rs  trait_objects.rs  unsafe.rs
