[package]
name = "my-zoo"
version = "0.1.0"
authors = ["flip1995 <philipp.krones@embecosm.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# This is for serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# This is for command line parsing
clap = "2.33"
